Feat: Carrito y registrarse
Avance de carrito de compras y registrarse como cliente
